Case no. EBT-144 alignment issue

--- a/WEB_THEMES.war/ECOMMERCE_STD_TEMPLATE_V2/scss/_unilogResponsiveLayout.scss
+++ b/WEB_THEMES.war/ECOMMERCE_STD_TEMPLATE_V2/scss/_unilogResponsiveLayout.scss
@@ -219,7 +219,7 @@ $breakpoint-mobileView:480px;
 				}
 			}
 			td {
-				&.alignCenter{
+				.alignCenter{
 					text-align: left;
 				}
 				text-align: left;
